--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	name = w3cj
-	email = cj@null.computer
+	name = Aryan Chhetri
+	email = aryanjr53@gmail.com
 [core]
 	editor = nano
 [init]
